docs: add documetation for opening
