# handler/createOpening.go
@@ -8,6 +8,18 @@ import (
 	"github.com/Bran00/oportuniesgo/schemas"
 )
 
+// @BasePath /api/v1
+
+//@Summary Create Opening
+//@Description Create a new job Opening
+//@Tags Openings
+//@Accept json
+//@Produce json
+//@Param request body CreateOpeningRequest true "Request body"
+//@Sucess 200 {object} CreateOpeningResponse
+//@Failure 400 {object} ErrorResponse
+//@Failure 500 {object} ErrorResponse
+//@Router /opening [post]
 func CreateOpeningHandler(ctx *gin.Context) {
 	request := CreateOpeningRequest{}
 
