# handler/response.go
@@ -5,6 +5,8 @@ import (
 	"net/http"
 
 	"github.com/gin-gonic/gin"
+
+	"github.com/Bran00/oportuniesgo/schemas"
 )
 
 func sendError(ctx *gin.Context, code int, msg string) {
@@ -19,6 +21,16 @@ func sendSucess(ctx *gin.Context, op string, data interface{}) {
 	ctx.Header("Content-type", "application/json")
 	ctx.JSON(http.StatusOK, gin.H{
 		"message": fmt.Sprintf("operation from handler: %s successfull", op),
-		"data": data,
+		"data":    data,
 	})
+}
+
+type ErrorResponse struct {
+	Message   string `json: "message"`
+	ErrorCode string `json: "errorCode"`
+}
+
+type CreateOpeningResponse struct {
+	Message string                  `json: "message"`
+	Data    schemas.OpeningResponse `json: "data"`
 }
